--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
 }
