--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.mediarouter:mediarouter:1.2.2'
-    //implementation 'com.r0adkll:slidableactivity:2.1.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
