--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PennyJoy">
-        <activity android:name=".SplashActivity"
-            android:noHistory="true">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +22,7 @@
 
             </intent-filter>
         </activity>
-        <activity android:name=".ResultOfQuizActivity"
-            android:noHistory="true"/>
+        <activity android:name=".ResultOfQuizActivity" />
 
         <activity android:name=".QuestionsActivity">
             <intent-filter>
@@ -33,8 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".HistoryActivity" />
-        <activity android:name=".SignInActivity"
-            android:noHistory="true">
+        <activity android:name=".SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
