--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,36 +9,36 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PennyJoy">
-        <activity android:name=".SplashScreenActivity"
+        <activity
+            android:name=".SplashScreenActivity"
             android:noHistory="true"
-            android:theme="@style/SplashTheme"
-            >
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddGoalActivity"></activity>
+        <activity android:name=".AddGoalActivity" />
         <activity
             android:name=".ResultOfQuizActivity"
             android:noHistory="true" />
-        <activity android:name=".QuestionsActivity"></activity>
+        <activity android:name=".QuestionsActivity" />
         <activity android:name=".HistoryActivity" />
         <activity
             android:name=".SignInActivity"
-            android:noHistory="true"></activity>
+            android:noHistory="true" />
         <activity android:name=".SetUserActivity" />
         <activity android:name=".SetPasswdActivity" />
-        <activity android:name=".MoneyPigActivity"></activity>
-        <activity android:name=".AddGoodAndOtherActivity"></activity>
-        <activity android:name=".ChartsActivity"></activity>
-        <activity android:name=".SignUpActivityNoAcc1"></activity>
-        <activity android:name=".SignUpActivityNoAcc2"></activity>
+        <activity android:name=".MoneyPigActivity" />
+        <activity android:name=".AddGoodAndOtherActivity" />
+        <activity android:name=".ChartsActivity" />
+        <activity android:name=".SignUpActivityNoAcc1" />
+        <activity android:name=".SignUpActivityNoAcc2" />
         <activity
             android:name=".SignUpActivityNoAcc3"
             android:noHistory="true" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
 
         <receiver android:name="Notifycations.ReminderForTimer" />
     </application>
